Devops/laboratorio/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-mesh
  labels:
    istio-injection: enabled
