Devops/laboratorio/k8s/service-a.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a
  namespace: demo-mesh
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-a
  template:
    metadata:
      labels:
        app: service-a
    spec:
      containers:
        - name: service-a
          image: ms-service-a:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: service-a
  namespace: demo-mesh
spec:
  selector:
    app: service-a
  ports:
    - port: 5000
      targetPort: 5000
