Devops/laboratorio/k8s/service-b.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b
  namespace: demo-mesh
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-b
  template:
    metadata:
      labels:
        app: service-b
    spec:
      containers:
        - name: service-b
          image: ms-service-b:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: service-b
  namespace: demo-mesh
spec:
  selector:
    app: service-b
  ports:
    - port: 5000
      targetPort: 5000
